# phases

./: .gitignore  Cargo.toml  data.py  notes.md  rust-toolchain.toml
examples/: b_2_f.rs  b_2_t.rs  b_2_time.rs  b_3_f.rs  b_3_t.rs  binary.rs  region_time.rs  single_system.rs  single_system_vacancy.rs  some_test.rs
python/: b_f.py  b_t.py  binary.py  data.py
src/: anim.rs  array_2d.rs  array_3d.rs  atoms.rs  binary.rs  const_latice.rs  fast_array.rs  lib.rs  logs.rs  main.rs  modular_array.rs  modular_grid.rs  plots.rs  system.rs  ternary.rs  trinary.rs
